Added auth endpoint
