# backend/generated/restapi/gaollery/auth/get_token_responses.go
@@ -1,0 +1,194 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/Richard87/goallery/generated/models"
+)
+
+// GetTokenOKCode is the HTTP code returned for type GetTokenOK
+const GetTokenOKCode int = 200
+
+/*
+GetTokenOK OK
+
+swagger:response getTokenOK
+*/
+type GetTokenOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.AuthResponse `json:"body,omitempty"`
+}
+
+// NewGetTokenOK creates GetTokenOK with default headers values
+func NewGetTokenOK() *GetTokenOK {
+
+	return &GetTokenOK{}
+}
+
+// WithPayload adds the payload to the get token o k response
+func (o *GetTokenOK) WithPayload(payload *models.AuthResponse) *GetTokenOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get token o k response
+func (o *GetTokenOK) SetPayload(payload *models.AuthResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetTokenOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetTokenBadRequestCode is the HTTP code returned for type GetTokenBadRequest
+const GetTokenBadRequestCode int = 400
+
+/*
+GetTokenBadRequest Bad Request
+
+swagger:response getTokenBadRequest
+*/
+type GetTokenBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ProblemDetails `json:"body,omitempty"`
+}
+
+// NewGetTokenBadRequest creates GetTokenBadRequest with default headers values
+func NewGetTokenBadRequest() *GetTokenBadRequest {
+
+	return &GetTokenBadRequest{}
+}
+
+// WithPayload adds the payload to the get token bad request response
+func (o *GetTokenBadRequest) WithPayload(payload *models.ProblemDetails) *GetTokenBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get token bad request response
+func (o *GetTokenBadRequest) SetPayload(payload *models.ProblemDetails) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetTokenBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetTokenUnauthorizedCode is the HTTP code returned for type GetTokenUnauthorized
+const GetTokenUnauthorizedCode int = 401
+
+/*
+GetTokenUnauthorized Unauthorized
+
+swagger:response getTokenUnauthorized
+*/
+type GetTokenUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ProblemDetails `json:"body,omitempty"`
+}
+
+// NewGetTokenUnauthorized creates GetTokenUnauthorized with default headers values
+func NewGetTokenUnauthorized() *GetTokenUnauthorized {
+
+	return &GetTokenUnauthorized{}
+}
+
+// WithPayload adds the payload to the get token unauthorized response
+func (o *GetTokenUnauthorized) WithPayload(payload *models.ProblemDetails) *GetTokenUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get token unauthorized response
+func (o *GetTokenUnauthorized) SetPayload(payload *models.ProblemDetails) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetTokenUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetTokenInternalServerErrorCode is the HTTP code returned for type GetTokenInternalServerError
+const GetTokenInternalServerErrorCode int = 500
+
+/*
+GetTokenInternalServerError Internal Server Error
+
+swagger:response getTokenInternalServerError
+*/
+type GetTokenInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ProblemDetails `json:"body,omitempty"`
+}
+
+// NewGetTokenInternalServerError creates GetTokenInternalServerError with default headers values
+func NewGetTokenInternalServerError() *GetTokenInternalServerError {
+
+	return &GetTokenInternalServerError{}
+}
+
+// WithPayload adds the payload to the get token internal server error response
+func (o *GetTokenInternalServerError) WithPayload(payload *models.ProblemDetails) *GetTokenInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get token internal server error response
+func (o *GetTokenInternalServerError) SetPayload(payload *models.ProblemDetails) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetTokenInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
