# backend/main.go
@@ -4,50 +4,70 @@ import (
 	"context"
 	"os"
 	"os/signal"
+	"time"
 
-	"github.com/Richard87/goallery/generated/models"
 	"github.com/Richard87/goallery/generated/restapi"
 	"github.com/Richard87/goallery/generated/restapi/gaollery"
-	"github.com/Richard87/goallery/generated/restapi/gaollery/images"
-	"github.com/Richard87/goallery/internal/pointers"
 	"github.com/Richard87/goallery/pkg/db"
+	"github.com/Richard87/goallery/pkg/handlers"
 	"github.com/go-openapi/loads"
-	"github.com/go-openapi/runtime/middleware"
 	"github.com/jessevdk/go-flags"
 	"github.com/rs/zerolog"
 	"github.com/rs/zerolog/log"
 )
 
 type AppConfig struct {
-	Photos   string `long:"photos-folder" description:"Directory to photos" default:"../photos" env:"PHOTOS_FOLDER"`
-	LogLevel string `long:"log-level" description:"Log level" default:"info" env:"LOG_LEVEL"`
+	Photos    string `long:"photos-folder" description:"Directory to photos" default:"../photos" env:"PHOTOS_FOLDER"`
+	LogLevel  string `long:"log-level" description:"Log level" default:"info" env:"LOG_LEVEL"`
+	LogFormat string `long:"log-format" description:"Log format ('json' or 'text')" default:"text" env:"LOG_FORMAT"`
 }
 
 func main() {
+	ctx, cancel := createContext(time.Second * 15)
+	defer cancel()
+
+	config, server, api := ParseConfig()
+	defer server.Shutdown()
+
+	configureLogger(config, api)
+	ctx = log.Logger.WithContext(ctx)
+
+	db, err := db.NewInMemoryDb(ctx, config.Photos)
+	if err != nil {
+		log.Fatal().Err(err).Msg("Failed to load InMemoryDb")
+	}
+
+	server.ConfigureAPI()
+	handlers.ConfigureHandlers(db, api)
+	if err = api.Validate(); err != nil {
+		log.Fatal().Err(err).Msg("Some handlers have not been implemented")
+	}
+
+	if err := server.Serve(); err != nil {
+		log.Fatal().Err(err).Msg("Failed to start server")
+	}
+
+}
+
+func createContext(timeout time.Duration) (context.Context, context.CancelFunc) {
 	ctx, cancel := context.WithCancel(context.Background())
 	c := make(chan os.Signal, 1)
 	signal.Notify(c, os.Interrupt)
-	defer func() {
-		signal.Stop(c)
-		cancel()
-	}()
 	go func() {
-		select {
-		case <-c:
-			cancel()
-		case <-ctx.Done():
-		}
+		<-c
+		cancel()
+		time.Sleep(timeout)
+		os.Exit(2)
 	}()
 
-	zerolog.TimeFieldFormat = zerolog.TimeFormatUnix
-	zerolog.DurationFieldInteger = true
-	zerolog.LevelFieldName = "severity"
-	pretty := os.Getenv("PRETTY") == "1"
-	if pretty {
-		log.Logger = log.Output(zerolog.ConsoleWriter{Out: os.Stderr})
+	cancelFunc := func() {
+		cancel()
+		signal.Stop(c)
 	}
-	ctx = log.Logger.WithContext(ctx)
 
+	return ctx, cancelFunc
+}
+func ParseConfig() (*AppConfig, *restapi.Server, *gaollery.GoalleryAPI) {
 	swaggerSpec, err := loads.Analyzed(restapi.SwaggerJSON, "")
 	if err != nil {
 		log.Fatal().Err(err).Msg("Failed to load swagger spec")
@@ -55,9 +75,7 @@ func main() {
 	config := &AppConfig{}
 
 	api := gaollery.NewGoalleryAPI(swaggerSpec)
-	api.Logger = log.Printf
 	server := restapi.NewServer(api)
-	defer server.Shutdown()
 
 	parser := flags.NewParser(config, flags.Default)
 	parser.ShortDescription = "Goallery"
@@ -77,48 +95,23 @@ func main() {
 		os.Exit(code)
 	}
 
-	log.Info().Msg("Setting log level to " + config.LogLevel)
+	return config, server, api
+}
+func configureLogger(config *AppConfig, api *gaollery.GoalleryAPI) {
+	zerolog.TimeFieldFormat = zerolog.TimeFormatUnix
+	zerolog.DurationFieldInteger = true
+	if config.LogFormat == "text" {
+		log.Logger = log.Output(zerolog.ConsoleWriter{Out: os.Stderr})
+	}
+
+	log.Info().Msg("Setting log level to " + config.LogLevel + ", format: " + config.LogFormat)
 	level, err := zerolog.ParseLevel(config.LogLevel)
 	if err != nil {
 		log.Fatal().Err(err).Msg("Unable to parse log-level")
 	}
 	zerolog.SetGlobalLevel(level)
 
-	db, err := db.NewInMemoryDb(ctx, config.Photos)
-	if err != nil {
-		log.Fatal().Err(err).Msg("Failed to load InMemoryDb")
+	api.Logger = func(f string, args ...interface{}) {
+		log.Info().Msgf(f, args...)
 	}
-
-	api.ImagesGetImagesHandler = images.GetImagesHandlerFunc(func(request images.GetImagesParams) middleware.Responder {
-
-		list, err := db.ListImages(request.HTTPRequest.Context())
-		if err != nil {
-			images.NewGetImagesInternalServerError().WithPayload(&models.ProblemDetails{
-				Detail: err.Error(),
-				Status: pointers.Int32(500),
-				Title:  pointers.String("Internal Server Error"),
-			})
-		}
-
-		return images.NewGetImagesOK().WithPayload(list)
-	})
-	api.ImagesGetImageByIDHandler = images.GetImageByIDHandlerFunc(func(request images.GetImageByIDParams) middleware.Responder {
-		image, err := db.GetImage(request.HTTPRequest.Context(), request.ID)
-		if err != nil {
-			images.NewGetImagesInternalServerError().WithPayload(&models.ProblemDetails{
-				Detail: err.Error(),
-				Status: pointers.Int32(500),
-				Title:  pointers.String("Internal Server Error"),
-			})
-		}
-
-		return images.NewGetImageByIDOK().WithPayload(image)
-	})
-
-	server.ConfigureAPI()
-
-	if err := server.Serve(); err != nil {
-		log.Fatal().Err(err).Msg("Failed to start server")
-	}
-
 }
